clusters/takeout/apps/sickchill/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sickchill
spec:
  serviceName: sickchill
  replicas: 1
  selector:
    matchLabels:
      app: sickchill
  template:
    metadata:
      labels:
        app: sickchill
    spec:
      containers:
      - name: sickchill
        image: sickchill/sickchill
        # command: ["sh","-c","tail -f /dev/null"]
        volumeMounts:
          - mountPath: /data
            name: sickchill-config
          - mountPath: /downloads
            name: downloads
          - mountPath: /tv
            subPath: "tv shows"
            name: warehouse
          - mountPath: /anime
            subPath: "anime"
            name: warehouse
        resources:
          requests:
            cpu: "100m"
          limits:
            memory: "1Gi"
        ports:
        - containerPort: 8081
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: qbittorrent-downloads
        - name: warehouse
          persistentVolumeClaim:
            claimName: warehouse-media
        - name: sickchill-config
          persistentVolumeClaim:
            claimName: sickchill-config
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: sickchill-config
      spec:
        resources:
          requests:
            storage: 1Gi
        volumeMode: Filesystem
        storageClassName: nfs-client
        accessModes:
          - ReadWriteMany
