clusters/takeout/apps/sickchill/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sickchill
spec:
  type: ClusterIP
  selector:
    app: sickchill
  ports:
    - name: sickchill
      protocol: TCP
      port: 80
      targetPort: 8081
